[gd_scene load_steps=3 format=2]

[ext_resource path="res://InventoryLogic/Slot.gd" type="Script" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/FurnaceSlots.gd" type="Script" id=2]

[node name="FurnaceSlots" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="FuelSlot" type="Panel" parent="."]
margin_left = -208.0
margin_top = -125.0
margin_right = -154.0
margin_bottom = -71.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="OreSlot1" type="Panel" parent="."]
margin_left = -130.0
margin_top = -155.0
margin_right = -76.0
margin_bottom = -101.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="OreSlot2" type="Panel" parent="."]
margin_left = -130.0
margin_top = -95.0
margin_right = -76.0
margin_bottom = -41.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="YieldSlot1" type="Panel" parent="."]
margin_left = 80.0
margin_top = -186.0
margin_right = 134.0
margin_bottom = -132.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="YieldSlot2" type="Panel" parent="."]
margin_left = 80.0
margin_top = -125.0
margin_right = 134.0
margin_bottom = -71.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="CoalYieldSlot" type="Panel" parent="."]
margin_left = 80.0
margin_top = -63.0
margin_right = 134.0
margin_bottom = -9.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )
